added cnn model

--- a/fake_news.ipynb
+++ b/fake_news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "4  December 25, 2017  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4  December 29, 2017   "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,8 +236,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +353,7 @@
        "4  December 25, 2017      1  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +441,7 @@
        "44897  JAKARTA (Reuters) - Indonesia will buy 11 Sukh...      0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,8 +632,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classic ML models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +657,7 @@
        "0.656921086675291"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +695,7 @@
        "0.9899094437257439"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +720,7 @@
        "0.991849935316947"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,8 +735,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GRU model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -785,19 +806,19 @@
        ")"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load(\"model.pth\", map_location=torch.device('cpu'), weights_only=True))\n",
+    "model.load_state_dict(torch.load(\"gru.pth\", map_location=torch.device('cpu'), weights_only=True))\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -813,10 +834,126 @@
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
     "\n",
     "all_preds = []\n",
+    "\n",
     "with torch.no_grad():\n",
     "    for X_batch, _ in test_loader:\n",
     "        X_batch = X_batch.to(device)\n",
     "        prediction = model(X_batch)\n",
+    "        all_preds.append(prediction.cpu())\n",
+    "all_preds = torch.cat(all_preds)\n",
+    "predicted_classes = (all_preds > 0.5).int()\n",
+    "print(\"Test Accuracy:\", accuracy_score(y_test, predicted_classes))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CNN model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CNN_model(\n",
+       "  (embedding): Embedding(173907, 100)\n",
+       "  (conv1): Conv1d(100, 50, kernel_size=(2,), stride=(1,))\n",
+       "  (conv2): Conv1d(50, 25, kernel_size=(2,), stride=(1,))\n",
+       "  (fc1): Linear(in_features=21950, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class CNN_model(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(CNN_model, self).__init__()\n",
+    "        self.embedding = nn.Embedding(len(vocab), 100)\n",
+    "        self.conv1 = nn.Conv1d(100, 50, 2)\n",
+    "        self.conv2 = nn.Conv1d(50, 25, 2)\n",
+    "        self.fc1 = nn.Linear(25*878, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.embedding(x.long())\n",
+    "        x = x.permute(0, 2, 1)\n",
+    "        x = torch.relu(self.conv1(x))\n",
+    "        x = torch.relu(self.conv2(x))\n",
+    "        x = x.view(x.shape[0], -1)\n",
+    "        x = torch.sigmoid(self.fc1(x))\n",
+    "        return x\n",
+    "    \n",
+    "model2 = CNN_model().to(device)\n",
+    "optimizer = optim.Adam(model2.parameters(), lr = 0.001)\n",
+    "\n",
+    "model2.train()\n",
+    "\n",
+    "## for epochs in range(5):\n",
+    "##    for X_batch, y_batch in train_loader:\n",
+    "##        X_batch = X_batch.to(device)\n",
+    "##        y_batch = y_batch.to(device)\n",
+    "##        \n",
+    "##        y_hat = model2(X_batch)\n",
+    "##        loss = crit(y_hat, y_batch)\n",
+    "##        loss.backward()\n",
+    "##        optimizer.step()\n",
+    "##        optimizer.zero_grad()\n",
+    "##    print(f\"Epoch: {epochs+1}, loss: {loss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CNN_model(\n",
+       "  (embedding): Embedding(173907, 100)\n",
+       "  (conv1): Conv1d(100, 50, kernel_size=(2,), stride=(1,))\n",
+       "  (conv2): Conv1d(50, 25, kernel_size=(2,), stride=(1,))\n",
+       "  (fc1): Linear(in_features=21950, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.load_state_dict(torch.load(\"cnn.pth\", map_location=torch.device('cpu'), weights_only=True))\n",
+    "model2.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.9980595084087969\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_preds = []\n",
+    "with torch.no_grad():\n",
+    "    for X_batch, _ in test_loader:\n",
+    "        X_batch = X_batch.to(device)\n",
+    "        prediction = model2(X_batch)\n",
     "        all_preds.append(prediction.cpu())\n",
     "all_preds = torch.cat(all_preds)\n",
     "predicted_classes = (all_preds > 0.5).int()\n",
